--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,48 @@
 ---
-title: "About"
+title: "About us"
 ---
 
-About this site
+## Ju-Chi Yu
 
-```{r}
-1 + 1
-```
+::: {layout="[ 70, 30 ]"}
+::: {#first-column}
+I am a post-doctoral research fellow at Centre for Addiction and Mental Health (CAMH). My work focuses on developing advanced multivariate methods to integrate and examine the relationships between structural and functional brain connectivity. Prior to joining CAMH, I received my Ph.D. in Cognition & Neuroscience from the University of Texas at Dallas, where I focused on developing advanced multivariate methods (with sparsification and for novel applications) to analyze neuroscience data (including behavioral data, genetics data, fMRI data, and resting-state fMRI data).
+:::
+
+::: {#second-column}
+![](img/juchiyu.jpeg)
+:::
+:::
+
+## Hervé Abdi
+
+::: {layout="[ 30, 70 ]"}
+<div>
+
+![](img/herveabdi.jpeg)
+
+</div>
+
+<div>
+
+I am a Professor at the University of Texas at Dallas in the School of Behavioral and Brain Sciences. My recent work focuses on face and person perception, odor perception, and computational modeling of these processes. I have developed statistical techniques to analyze large data sets, such as those found in genomics, brain imaging, and sensory evaluation, including principal component analysis and multiple factor analysis.
+
+</div>
+:::
+
+## Vincent Guillemot
+
+::: {layout="[ 70, 30 ]"}
+<div>
+
+I am currently a biostatistician in the Hub of Bioinformatics and Biostatistics. Before that, I worked at the Brain and Spine Institute (Paris, France), NeuroSpin (Saclay, France) and in the Ludwig Maximilian University (Munich, Germany). My fields of expertise include biostatistics, multivariate statistics, data visualization, statistical data integration and machine learning. My teaching activities range from the introduction to basic concepts in statistics to theoretical aspects in convex optimization.
+
+</div>
+
+<div>
+
+![](img/vincentguillemot.jpeg)
+
+</div>
+:::
+
