--- a/pages/C_PLSConWines.qmd
+++ b/pages/C_PLSConWines.qmd
@@ -7,19 +7,21 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
+```{=html}
 <style type="text/css">
 body {
   font-size: 14pt;
 }
 </style>
-
+```
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   echo = TRUE, 
-  dev = "svg",
-  fig.ext = "svg", 
+  # dev = "svg",
+  # fig.ext = "svg", 
   fig.width = 7, 
   fig.height = 7
 )
@@ -59,9 +61,7 @@ varColors$oc[[2]] <- as.matrix(rep("olivedrab3", 8))
     
 ```
 
-
 More information on the dataset is available on the corresponding vignette: `vignette("A3_DataWines")`.
-
 
 ## Two tables with descriptors and other supplementary information
 
@@ -80,8 +80,8 @@ senso <- winesOf3Colors$winesDescriptors %>%
 
 ### Two data tables
 
- * First table: chemical data (`chemi`) that includes `acidity`, `alcohol`, `sugar`, and `tannin`.
- * Second table: sensory data (`senso`) that includes `fruity`, `floral`, `vegetal`, `spicy`, `woody`, `sweet`, `astringent`, and `hedonic`.
+-   First table: chemical data (`chemi`) that includes `acidity`, `alcohol`, `sugar`, and `tannin`.
+-   Second table: sensory data (`senso`) that includes `fruity`, `floral`, `vegetal`, `spicy`, `woody`, `sweet`, `astringent`, and `hedonic`.
 
 ```{r chemi, eval = FALSE, echo = FALSE, results='asis'}
 ### First table: chemical data
@@ -96,7 +96,6 @@ senso <- winesOf3Colors$winesDescriptors %>%
 #     row_spec(0, angle = 0, align = "right", font_size = fontsize)
 ```
 
-
 ```{r senso, eval = FALSE, echo = FALSE}
 ### Second table: sensory data
 # senso %>%
@@ -109,16 +108,16 @@ senso <- winesOf3Colors$winesDescriptors %>%
 
 ### Descriptors and supplementary variable
 
- * Descriptors: `origin`, `color` and `varietal`.
- * Supplementary variables: `Price`.
- 
+-   Descriptors: `origin`, `color` and `varietal`.
+-   Supplementary variables: `Price`.
+
 ## Run Partial Least Square Correlation (PLS-C) on the two tables
 
 ```{r run}
 res.pls <- tepPLS(chemi, senso, DESIGN = descr$color, graphs = FALSE)
 ```
 
-The default of this function will center (to have means equal 0) and scale (to have the _sums of squares_ equal 1) all variables in both data tables. The argument `DESIGN` indicates the groups of the observations and change how the observations are colored in the figures (when `graphs = TRUE`), but it does not change the results of PLS-C.
+The default of this function will center (to have means equal 0) and scale (to have the *sums of squares* equal 1) all variables in both data tables. The argument `DESIGN` indicates the groups of the observations and change how the observations are colored in the figures (when `graphs = TRUE`), but it does not change the results of PLS-C.
 
 ## Generate the figures
 
@@ -148,7 +147,7 @@ res.pls.plot$results.graphs$heatmap.rxy
 
 ### Scree plot
 
-The scree plot shows the eigenvalues of each dimension. These eigenvalues give the squared _covariance_ of each pair of latent variables. In other words, the singular values, which are the square root of the eigenvalues, give the _covariance_ of these pairs of latent variables. The sum of the eigenvalues is equal to the sum of the squared covariance between all variables in both tables.
+The scree plot shows the eigenvalues of each dimension. These eigenvalues give the squared *covariance* of each pair of latent variables. In other words, the singular values, which are the square root of the eigenvalues, give the *covariance* of these pairs of latent variables. The sum of the eigenvalues is equal to the sum of the squared covariance between all variables in both tables.
 
 ```{r scree, fig.height = 4}
 res.pls.plot$results.graphs$scree.eig
@@ -156,11 +155,11 @@ res.pls.plot$results.graphs$scree.eig
 
 ### Latent variables
 
-Here, we plot the first latent variable of both tables against each other with the observations colored according to their groups. This plot shows how the observations are distributed on the dimension and how the chosen pair of latent variables are related to each other. When plotting the first pair of latent variables, we expect the _observations_ to distribute along the bottom-left-to-top-right diagonal line (which illustrates a perfect association), because PLS-C maximizes the _covariance_ of the latent variables.
+Here, we plot the first latent variable of both tables against each other with the observations colored according to their groups. This plot shows how the observations are distributed on the dimension and how the chosen pair of latent variables are related to each other. When plotting the first pair of latent variables, we expect the *observations* to distribute along the bottom-left-to-top-right diagonal line (which illustrates a perfect association), because PLS-C maximizes the *covariance* of the latent variables.
 
-To examine the stability of these groups, we plot the group means with their 95% bootstrap confidence intervals (or ellipsoids). If the ellipses do not overlap, the groups are reliably different from each other. However, it's worth noted that the distribution of the _observations_ does not imply how the _groups_ (represented by the group means) are distributed or whether the groups are reliably different from each other. 
+To examine the stability of these groups, we plot the group means with their 95% bootstrap confidence intervals (or ellipsoids). If the ellipses do not overlap, the groups are reliably different from each other. However, it's worth noted that the distribution of the *observations* does not imply how the *groups* (represented by the group means) are distributed or whether the groups are reliably different from each other.
 
-_Note_: The grouping information are independent from PLS-C and are only use to help provide a summary description of the observations.
+*Note*: The grouping information are independent from PLS-C and are only use to help provide a summary description of the observations.
 
 ```{r LV map}
 res.pls.plot$results.graphs$lv.plot
@@ -170,11 +169,11 @@ The results from Dimension 1 show that the association between the chemical and 
 
 ### Contributions
 
-These bar plots illustrate the signed _contribution_ of variables from the two data tables. From these figures, we use the direction and the magnitude of these signed contributions to interpret the dimension.
+These bar plots illustrate the signed *contribution* of variables from the two data tables. From these figures, we use the direction and the magnitude of these signed contributions to interpret the dimension.
 
-The direction of the signed contribution is the direction of the loadings, and it shows _how_ the variables contribute to the dimension. The variables that contribute in a similar way have the same sign, and those that contribute in an opposite way will have different signs.
+The direction of the signed contribution is the direction of the loadings, and it shows *how* the variables contribute to the dimension. The variables that contribute in a similar way have the same sign, and those that contribute in an opposite way will have different signs.
 
-The magnitude of the contributions are computed as squared loadings, and they quantify the amount of variance contributed by each variable. Therefore, contribution is similar to the idea of an _effect size_. To identify the important variables, we find the variables that contribute more than average (i.e., with a big enough effect size). When the variables are centered and scaled to have their _sums of squares equals 1_, each variable contributes one unit of variance; therefore, the average contribution is 1/(# of variables of the table).
+The magnitude of the contributions are computed as squared loadings, and they quantify the amount of variance contributed by each variable. Therefore, contribution is similar to the idea of an *effect size*. To identify the important variables, we find the variables that contribute more than average (i.e., with a big enough effect size). When the variables are centered and scaled to have their *sums of squares equals 1*, each variable contributes one unit of variance; therefore, the average contribution is 1/(# of variables of the table).
 
 ```{r loadings, fig.height = 4}
 res.pls.plot$results.graphs$ctrX.plot
@@ -187,7 +186,7 @@ Together with the latent variable plot, we found that, as compared to the rose a
 
 ### Circles of correlations
 
-The circle of correlations illustrate how the variables are correlated with each other and with the dimensions. From this figure, the length of an arrow indicates how much this variable is explained by the two given dimensions. The cosine between any two arrows gives their correlation. The cosine between a variable and an axis gives the correlation between that variable and the corresponding dimension. 
+The circle of correlations illustrate how the variables are correlated with each other and with the dimensions. From this figure, the length of an arrow indicates how much this variable is explained by the two given dimensions. The cosine between any two arrows gives their correlation. The cosine between a variable and an axis gives the correlation between that variable and the corresponding dimension.
 
 In this figure, an angle closer to 0° indicates a correlation close to 1; an angle closer to 180° indicates a correlation close to -1; and an 90° angle indicates 0 correlation. However, it's worth noted that this implication of correlation might only be true within the given dimensions. When a variable is far away from the circle, it is not fully explained by the dimensions, and other dimensions might be characterized by other pattern of relationship between this and other variables.
 
@@ -215,7 +214,7 @@ res.plot.plsc.inference <- TTAplotInference(
 
 ### Bootstrap and permutation tests on the eigenvalues
 
-The inference scree plot illustrates the 95\% bootstrap confidence intervals of the eigenvalues. If an interval includes 0, the eigenvalue is reliably larger than 0.
+The inference scree plot illustrates the 95% bootstrap confidence intervals of the eigenvalues. If an interval includes 0, the eigenvalue is reliably larger than 0.
 
 ```{r scree inference, fig.height = 4, warning = FALSE, message = FALSE}
 res.plot.plsc.inference$results.graphs$scree
@@ -225,7 +224,7 @@ The bootstrap test identifies two significant dimensions having eigenvalues reli
 
 ### Bootstrap test on the loadings
 
-The bar plot illustrates the _bootstrap ratios_ which equals $$\frac{M_{p_{j}boot}}{SD_{p_{j}boot}},$$ where $M_{p_{j}boot}$ is the mean of the bootstrapped sample of the *j*th loading and $SD_{p_{j}boot}$ is the bootstrapped standard deviation of the factor score. A bootstrap ratio is equivalent to a _t_-statistics for the column factor score with the $\mathrm{H}_0: g_j = 0$. The threshold is set to 2 to approximate the critical _t_-value of 1.96 at $\alpha$ = .05.
+The bar plot illustrates the *bootstrap ratios* which equals $$\frac{M_{p_{j}boot}}{SD_{p_{j}boot}},$$ where $M_{p_{j}boot}$ is the mean of the bootstrapped sample of the *j*th loading and $SD_{p_{j}boot}$ is the bootstrapped standard deviation of the factor score. A bootstrap ratio is equivalent to a *t*-statistics for the column factor score with the $\mathrm{H}_0: g_j = 0$. The threshold is set to 2 to approximate the critical *t*-value of 1.96 at $\alpha$ = .05.
 
 ```{r bootstrap ratios 1, fig.height = 4}
 res.plot.plsc.inference$results.graphs$BR.X
@@ -239,7 +238,7 @@ res.plot.plsc.inference$results.graphs$BR.Y
 
 The bootstrap test identifies `Floral`, `Spicy`, `Woody`, `Sweet`, `Astringent` and `Hedonic` as significant sensory variables with loadings different from 0.
 
-It's worth noted that the bootstrap ratio gives different information as contributions. Contributions describe the size of the effect, and the bootstrap ratios describe the reliability of the loadings. Therefore, when we interpret the results, we will combine both to draw a conclusion. 
+It's worth noted that the bootstrap ratio gives different information as contributions. Contributions describe the size of the effect, and the bootstrap ratios describe the reliability of the loadings. Therefore, when we interpret the results, we will combine both to draw a conclusion.
 
 #### Interpreting loadings with contributions and bootstrap ratios
 
