--- a/pages/G_PLSRonWines_part2.qmd
+++ b/pages/G_PLSRonWines_part2.qmd
@@ -8,19 +8,20 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{=html}
 <style type="text/css">
 body {
   font-size: 14pt;
 }
 </style>
-
+```
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   echo = TRUE, 
-  dev = "svg",
-  fig.ext = "svg", 
+  # dev = "svg",
+  # fig.ext = "svg", 
   fig.width = 7, 
   fig.height = 7
 )
@@ -79,9 +80,8 @@ hedo <- winesOf3Colors$winesDescriptors %>%
 
 ### PLS-R: Two data tables
 
- * The predictor table (**X**): chemical data (`chemi`) that includes `acidity`, `alcohol`, `sugar`, and `tannin`.
- * The predicted table (**Y**): sensory data (`senso`) that includes `fruity`, `floral`, `vegetal`, `spicy`, `woody`, `sweet`, and `astringent`.
-
+-   The predictor table (**X**): chemical data (`chemi`) that includes `acidity`, `alcohol`, `sugar`, and `tannin`.
+-   The predicted table (**Y**): sensory data (`senso`) that includes `fruity`, `floral`, `vegetal`, `spicy`, `woody`, `sweet`, and `astringent`.
 
 ```{r chemi, eval = FALSE, echo = FALSE, results='asis'}
 ### First table: chemical data
@@ -96,7 +96,6 @@ hedo <- winesOf3Colors$winesDescriptors %>%
 #     row_spec(0, angle = 0, align = "right", font_size = fontsize)
 ```
 
-
 ```{r senso, eval = FALSE, echo = FALSE}
 ### Second table: sensory data
 # senso %>%
@@ -109,9 +108,9 @@ hedo <- winesOf3Colors$winesDescriptors %>%
 
 ### Descriptors and supplementary variable
 
- * Descriptors: `origin`, `color` and `varietal`.
- * Supplementary variables: `Price`.
- 
+-   Descriptors: `origin`, `color` and `varietal`.
+-   Supplementary variables: `Price`.
+
 ## Run Partial Least Square Regression (PLS-R) on the two tables
 
 The `data4PCCAR::PLSR_SVD` function takes two entries of data tables. The first entry will be the predictor table (**X**) and the second entry will be the predicted table (**Y**) as in a regression equation: $\mathbf{Y = \beta X + E}$. In RA, the dimensions maximize $\beta$ of each pair of latent variables.
@@ -120,7 +119,7 @@ The `data4PCCAR::PLSR_SVD` function takes two entries of data tables. The first 
 res.plsr <- data4PCCAR::PLSR_SVD(chemi, senso, 3, inference = TRUE, displayJack = TRUE)
 ```
 
-The function will center (to have means equal 0) and scale (to have the _standard deviation_ equal 1) all variables in both data tables.
+The function will center (to have means equal 0) and scale (to have the *standard deviation* equal 1) all variables in both data tables.
 
 ## Generate the figures
 
@@ -152,7 +151,7 @@ res.plsr.plot$results.graphs$heatmap.rxy
 
 ### Scree plot
 
-The scree plot shows the eigenvalues of each dimension. These eigenvalues give the squared _coefficient of regression_ ($\beta^2$ = ) of each pair of latent variables. In other words, the singular values, which are the square root of the eigenvalues, give the _coefficient of regression_ ($\beta$ = ) of these pairs of latent variables. The sum of the eigenvalues is equal to the sum of the squared correlation between all variables in both tables.
+The scree plot shows the eigenvalues of each dimension. These eigenvalues give the squared *coefficient of regression* ($\beta^2$ = ) of each pair of latent variables. In other words, the singular values, which are the square root of the eigenvalues, give the *coefficient of regression* ($\beta$ = ) of these pairs of latent variables. The sum of the eigenvalues is equal to the sum of the squared correlation between all variables in both tables.
 
 ```{r scree, fig.height = 4}
 res.plsr.plot$results.graphs$scree.eig.R2X
@@ -164,11 +163,11 @@ res.plsr.plot$results.graphs$Y.RESS.plot
 
 ### Latent variables
 
-Here, we plot the first latent variable of both tables against each other with the observations colored according to their groups. This plot shows how the observations are distributed on the dimension and how the chosen pair of latent variables are related to each other. When plotting the first pair of latent variables, we expect the _observations_ to distribute along the bottom-left-to-top-right diagonal line (which illustrates a perfect association), because RA maximizes the _coefficient of regression_ of the latent variables.
+Here, we plot the first latent variable of both tables against each other with the observations colored according to their groups. This plot shows how the observations are distributed on the dimension and how the chosen pair of latent variables are related to each other. When plotting the first pair of latent variables, we expect the *observations* to distribute along the bottom-left-to-top-right diagonal line (which illustrates a perfect association), because RA maximizes the *coefficient of regression* of the latent variables.
 
-To examine the stability of these groups, we plot the group means with their 95% bootstrap confidence intervals (or ellipsoids). If the ellipses do not overlap, the groups are reliably different from each other. However, it's worth noted that the distribution of the _observations_ does not imply how the _groups_ (represented by the group means) are distributed or whether the groups are reliably different from each other. 
+To examine the stability of these groups, we plot the group means with their 95% bootstrap confidence intervals (or ellipsoids). If the ellipses do not overlap, the groups are reliably different from each other. However, it's worth noted that the distribution of the *observations* does not imply how the *groups* (represented by the group means) are distributed or whether the groups are reliably different from each other.
 
-_Note_: The grouping information are independent from RA and are only use to help provide a summary description of the observations.
+*Note*: The grouping information are independent from RA and are only use to help provide a summary description of the observations.
 
 ```{r LV map}
 res.plsr.plot$results.graphs$lv.plot
@@ -178,11 +177,11 @@ The results from Dimension 1 show that the chemical data can predict the perform
 
 ### Contributions
 
-These bar plots illustrate the signed _contribution_ of variables from the two data tables. From these figures, we use the direction and the magnitude of these signed contributions to interpret the dimension.
+These bar plots illustrate the signed *contribution* of variables from the two data tables. From these figures, we use the direction and the magnitude of these signed contributions to interpret the dimension.
 
-The direction of the signed contribution is the direction of the loadings, and it shows _how_ the variables contribute to the dimension. The variables that contribute in a similar way have the same sign, and those that contribute in an opposite way will have different signs.
+The direction of the signed contribution is the direction of the loadings, and it shows *how* the variables contribute to the dimension. The variables that contribute in a similar way have the same sign, and those that contribute in an opposite way will have different signs.
 
-The magnitude of the contributions are computed as squared loadings, and they quantify the amount of variance contributed by each variable. Therefore, contribution is similar to the idea of an _effect size_. To identify the important variables, we find the variables that contribute more than average (i.e., with a big enough effect size). When the variables are centered and scaled to have their _sums of squares equals 1_, each variable contributes one unit of variance; therefore, the average contribution is 1/(# of variables of the table).
+The magnitude of the contributions are computed as squared loadings, and they quantify the amount of variance contributed by each variable. Therefore, contribution is similar to the idea of an *effect size*. To identify the important variables, we find the variables that contribute more than average (i.e., with a big enough effect size). When the variables are centered and scaled to have their *sums of squares equals 1*, each variable contributes one unit of variance; therefore, the average contribution is 1/(# of variables of the table).
 
 ```{r loadings, fig.height = 4}
 res.plsr.plot$results.graphs$ctrW1.plot
@@ -199,7 +198,7 @@ Together with the latent variable plot, we found that, as compared to the rosé 
 
 ### Circles of correlations
 
-The circle of correlations illustrate how the variables are correlated with each other and with the dimensions. From this figure, the length of an arrow indicates how much this variable is explained by the two given dimensions. The cosine between any two arrows gives their correlation. The cosine between a variable and an axis gives the correlation between that variable and the corresponding dimension. 
+The circle of correlations illustrate how the variables are correlated with each other and with the dimensions. From this figure, the length of an arrow indicates how much this variable is explained by the two given dimensions. The cosine between any two arrows gives their correlation. The cosine between a variable and an axis gives the correlation between that variable and the corresponding dimension.
 
 In this figure, an angle closer to 0° indicates a correlation close to 1; an angle closer to 180° indicates a correlation close to -1; and an 90° angle indicates 0 correlation. However, it's worth noted that this implication of correlation might only be true within the given dimensions. When a variable is far away from the circle, it is not fully explained by the dimensions, and other dimensions might be characterized by other pattern of relationship between this and other variables.
 
