--- a/pages/B_PCA.qmd
+++ b/pages/B_PCA.qmd
@@ -1,20 +1,11 @@
 ---
 title: "PCA on Beers"
-author: "Vincent Guillemot, Hervé Abdi, Ju-Chi Yu & Soudeh Ardestani Khoubrouy"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{PCA on Beers}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+format:
+  html:
+    code-fold: true
+    code-summary: "R code"
 ---
 
-```{=html}
-<style type="text/css">
-body {
-  font-size: 14pt;
-}
-</style>
-```
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
