--- a/pages/A_Data.qmd
+++ b/pages/A_Data.qmd
@@ -10,7 +10,8 @@ format:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  echo = TRUE#, 
+  echo = TRUE,
+  warning = FALSE
   # dev = "svg",
   # fig.ext = "svg"
 )
@@ -20,19 +21,34 @@ library(kableExtra)
 library(ggplot2)
 ```
 
-## Load the data
+```{r winesOf3Colors preliminary shown, eval = FALSE}
+# Before loading the data, load the following packages
+library(dplyr)
+library(knitr)
+library(kableExtra)
+library(ggplot2)
 
-With the following command
-
-```{r winesOf3Colors}
+# Load the data with the following commands
 data("winesOf3Colors", package = "data4PCCAR")
-```
-
-```{r hidden colors, echo = FALSE}
 wineColors <- winesOf3Colors$winesDescriptors$color
 wineColors <- as.character(recode(wineColors, red = 'indianred4', 
                 white = 'gold', rose = 'lightpink2'))
 ```
+
+```{r winesOf3Colors preliminary hidden, echo = FALSE}
+# Load the data with the following commands
+data("winesOf3Colors", package = "data4PCCAR")
+wineColors <- winesOf3Colors$winesDescriptors$color
+wineColors <- as.character(recode(wineColors, red = 'indianred4', 
+                white = 'gold', rose = 'lightpink2'))
+```
+
+
+# Data
+
+The data is shown in the following tables for the 3 countries of origin: Argentina, Canada, and USA.
+
+::: {.panel-tabset}
 
 ## Argentina {.smaller}
 
@@ -74,7 +90,11 @@ wines_usa %>%
     row_spec(0, angle = 0, align = "right", font_size = fontsize)
 ```
 
+:::
+
 ## Four tables
+
+There are four types of variables in the data:
 
 -   Descriptors: `origin`, `color` and `varietal`;
 -   Suplementary variables: `Price`;
@@ -106,7 +126,7 @@ senso_long <- tibble(
         names_to = "xids")
 
 
-(suppressWarnings(heatmap.rxy <- senso_long  %>%
+(heatmap.rxy <- senso_long  %>%
     ggplot(aes(xids, yids, fill = scores)) +
     geom_tile() +
     # geom_text(aes(label = round(scores, 2))) +
@@ -116,7 +136,7 @@ senso_long <- tibble(
         axis.ticks.x = element_line(color = wineColors),
         axis.text.x = element_text(color = wineColors, size = 7),
     ) +
-    labs(x = "", y = ""))) + 
+    labs(x = "", y = "") + 
     coord_flip() + 
-    theme(legend.position = "bottom")
+    theme(legend.position = "bottom"))
 ```
